--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -10,6 +10,7 @@
     width: 132px;
     height: 132px;
     margin-top: -30px;
+  
 }
 .header .btn-contact{
     margin-top:-5px;
@@ -17,6 +18,11 @@
     background-color: transparent !important;
     color: var(--white) !important;
     transition: var(--transition-1);
+    width: 135px;
+    height: 39px;
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 19.36px;
 }
 .header .btn-contact:hover{
     background-color: var(--Primary) !important;
@@ -45,6 +51,7 @@
         width: 100px;
         height: 100px;
         margin-top: -22px;
+
     }
     .header .nav-link,.header .btn-contact{font-size: 13px;}
 }
@@ -58,7 +65,7 @@
 (min-width:991px) and (max-width:991.5px) {
     .header .nav-link{font-size: var(--p-16) !important;}
     .header .nav-link:hover:after{height: 0;}
-    .header .nav-container{ 
+    .header .nav-container{
         background-color: var(--alpha-bg);
         backdrop-filter: blur(10px);
         padding: 0 20px;
