--- a/src/components/TopNav/TopNav.css
+++ b/src/components/TopNav/TopNav.css
@@ -1,9 +1,11 @@
-.top-nav{
-  background-color:var(--top-bg);
+.top-nav {
+  background-color: var(--Top-bg);
 }
-.top-nav .top-nav-link{
-    transition: var(--transition-1);
+
+.top-nav .top-nav-link {
+  transition: var(--transition-1);
 }
-.top-nav .top-nav-link:hover{
-    color: var(--Primary) !important;
+
+.top-nav .top-nav-link:hover {
+  color: var(--Primary) !important;
 }
