--- a/src/index.css
+++ b/src/index.css
@@ -14,6 +14,14 @@
     --content-bg:#2a2a2a;
     --exam-today:#D9D9D91C;
     --course:#1111118F;
+    --main-bg:#212121;
+    --footer-clr:#141313;
+    --main-clr:#1a1919;
+    --overlay:-webkit-linear-gradient(top,rgba(26,25,25,0.8),rgba(26,25,25,1));
+    --login-bg:#2f2f2f;
+    --form-bg:#252525;
+    --input-bg:#414040;
+    --password-eye:#676767;
 
 
 
@@ -76,4 +84,16 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+::-webkit-scrollbar {
+  width: 10px;
+}
+
+::-webkit-scrollbar-track {
+  background-color: rgb(250, 244, 244);
+}
+
+::-webkit-scrollbar-thumb {
+  background-color:var(--Primary);
+  border-radius: 20px;
 }
