--- a/src/Pages/Adminpanel/Articalpage/Articalpage.css
+++ b/src/Pages/Adminpanel/Articalpage/Articalpage.css
@@ -7,7 +7,7 @@
     width: 80px;
     border-bottom: 1px solid var(--Primary-color);
     position: absolute;
-    left: 0px;
+    left: 0px;a
     bottom: -5px;
     }
     #search{
