--- a/src/Components/Footer/Footer.css
+++ b/src/Components/Footer/Footer.css
@@ -1,8 +1,7 @@
 .footer{
-    background-color:var(--footer-bg);
+    background-color:var(--main-clr);
     padding: 20px 0 50px 0;
     overflow: hidden;
-    
 }
 .footer .footer-logo{width: 132px;height: 132px;}
 .footer .footer-title h3{font-size: var(--p-24);margin-bottom: 20px;}
@@ -16,7 +15,7 @@
 }
 .footer .footer-nav a:hover,.footer .social-icon:hover{color: var(--Primary);}
 .footer .social-icon:hover{transform: scale(1.1);}
-.footer  .email-icon{
+.footer .email-icon{
     color: var(--Primary);
     width: 25px;
     height: 25px;
@@ -33,7 +32,7 @@
 .footer .footer-bg{
     height: 35px;
     margin-top: -25px;
-    background-color: var(--footer-bg)
+    background-color:var(--footer-clr)
 }
 @media  (max-width:767px),
 (min-width:767px) and (max-width:767.5px){
@@ -43,8 +42,8 @@
     .footer .footer-contact p{margin-top: -10px !important;}
     .footer .footer-last-sec{ border: none;}
     .footer .footer-icons{position: absolute;top: -250px;right: 0;}
-    .footer .social-icon{margin-bottom: 20px;font-size: 30px;}
+    .footer .social-icon{margin-bottom: 20px;font-size: 30px;}  
 }
 @media (max-width:280px) {
-    .footer .footer-title p{font-size: var(--p-18)}
+    .footer .footer-title p{font-size: var(--p-18)}   
 }
