--- a/src/Components/Welcome_Instructor/Welcome_instructor.css
+++ b/src/Components/Welcome_Instructor/Welcome_instructor.css
@@ -8,6 +8,7 @@
     background-image: url(../../assets/images/secondary_background.jpg);
     background-repeat: no-repeat;
     background-size: cover;
+    background-attachment: fixed;
 
 
 
