--- a/src/Components/ButtonTop/ButtonTop.css
+++ b/src/Components/ButtonTop/ButtonTop.css
@@ -8,15 +8,20 @@
     line-height: 40px;
     text-align: center;
     border-radius: 50%;
-    border: 1px solid var(--secondary);  
+    border: 1px solid var(--Primary);  
     transition: var(--transition-1); 
     backdrop-filter: blur(10px);
     display: none;
+    animation: move 0.5s infinite alternate;
 }
 .button-top:hover{
-    background-color:var(--secondary);
+    background-color:var(--Primary);
     transform: scale(1.1);
     cursor: pointer;
+}
+@keyframes move {
+    0% {transform: translateY(0);}
+    100% {transform: translateY(-10px);}
 }
 @media (max-width:768px) {
     .button-top{
@@ -24,4 +29,3 @@
       right: 15px;
     }
 }
-
