--- a/src/Components/Welcome/Welcome.css
+++ b/src/Components/Welcome/Welcome.css
@@ -8,6 +8,7 @@
     background-image: url(../../assets/images/secondary_background.jpg);
     background-repeat: no-repeat;
     background-size: cover;
+    background-attachment: fixed;
 
 
 
@@ -28,7 +29,7 @@
     padding-bottom: 15px;
 
 }
-.Welcome_Student .Date_portal p{
+.Welcome_Student .side-bar-headerp{
     font-size: 16px;
     font-weight: 400;
     line-height: 19.36px;
