--- a/src/Components/JobShowPage/jobShowPage.css
+++ b/src/Components/JobShowPage/jobShowPage.css
@@ -1,4 +1,3 @@
-
 .job-screen-show {
   background: url("../../assets/images/secondary_background.jpg");
   background-size: cover;
@@ -6,9 +5,6 @@
   background-attachment: fixed;
   color: var(--white);
   height: 100%;
-
-
-
 }
 .job-screen-show .btn {
   color: var(--white);
@@ -42,8 +38,6 @@
   display: block;
   width: 78%;
 }
-
-/*Search section */
 
 .job-screen-show .form-control {
   width: 70%;
@@ -117,17 +111,12 @@
   height: 62px;
   background-color: rgba(17, 17, 17, 0.56);
 }
-/* .filter {
-} */
+
 .job-screen-show .clear-all {
   color: var(--Primary);
   border-radius: 5px;
 }
-/* .location-form {
-  width: 100%;
-  color: #fff;
-} */
-/*--------Select form*/
+
 .job-screen-show .form-select {
   width: 95%;
   height: 49px;
@@ -154,8 +143,7 @@
 }
 /* Check boxs */
 .job-screen-show .form-check-input:checked {
-  background-color: #fd9d0d;
-  border-color: #bdfd0d;
+  background-color: var(--Primary);
 }
 .job-screen-show .logo-comp img {
   display: inline-block;
@@ -163,11 +151,9 @@
   height: 50px;
 }
 
-/* */
 .job-screen-show .contacts-job {
   background-color: rgba(0, 0, 0, 0.19);
   flex: 70%;
-  /* padding: 2rem 2rem 5rem 2rem; */
   height: 90%;
   padding: 20px;
 }
@@ -207,7 +193,7 @@
   font-size: 16px;
   font-weight: 700;
 }
-/* @media (max-width: 767px) {
+@media (max-width: 767px) {
   .form-control {
     width: 100%;
     border-radius: 5px;
@@ -218,14 +204,13 @@
     width: 100%;
     border-radius: 5px;
   }
-} */
+}
 .job-screen-show .form-inline .bar-icon {
   display: none;
 }
 .job-screen-show .onsite-mob-view {
   display: none;
 }
-
 
 @media (max-width: 767px) {
   .job-screen-show .form-inline {
@@ -251,10 +236,7 @@
     border-radius: 5px;
     margin-left: 6px;
   }
-  /* .form input {
-    width: 345px;
-    height: 47px;
-  } */
+
   .job-screen-show .menu-job {
     display: none;
   }
@@ -285,19 +267,6 @@
     display: block;
   }
 }
-/* @media (min-width: 1200px) {
-  .menu-job {
-    height: 90%;
-    display: flex;
-    flex-shrink: 0;
-    display: none;
-  }
-  .contacts-job {
-    flex-shrink: 0;
-    width: 353px;
-    height: 1015px;
-  }
-} */
 @media (max-width: 991px) {
   .job-screen-show .bg-layer {
     background-position: 50%;
